언어 변경 설정 즉시 반영되도록 설정

--- a/AIpaca_App/Resources/Localization/AppResources.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.resx
@@ -117,7 +117,55 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="apisetting" xml:space="preserve">
+    <value>API 설정</value>
+  </data>
+  <data name="appversion" xml:space="preserve">
+    <value>앱버전</value>
+  </data>
+  <data name="challenge" xml:space="preserve">
+    <value>도전과제</value>
+  </data>
+  <data name="darkmode" xml:space="preserve">
+    <value>다크모드</value>
+  </data>
   <data name="hi" xml:space="preserve">
     <value>안녕하세요</value>
+  </data>
+  <data name="home" xml:space="preserve">
+    <value>홈</value>
+  </data>
+  <data name="languageset" xml:space="preserve">
+    <value>언어설정</value>
+  </data>
+  <data name="login" xml:space="preserve">
+    <value>로그인</value>
+  </data>
+  <data name="logout" xml:space="preserve">
+    <value>로그아웃</value>
+  </data>
+  <data name="lowspecmode" xml:space="preserve">
+    <value>저사양모드</value>
+  </data>
+  <data name="network" xml:space="preserve">
+    <value>네트워크</value>
+  </data>
+  <data name="record" xml:space="preserve">
+    <value>기록</value>
+  </data>
+  <data name="robots" xml:space="preserve">
+    <value>로봇놈들</value>
+  </data>
+  <data name="setting" xml:space="preserve">
+    <value>설정</value>
+  </data>
+  <data name="signup" xml:space="preserve">
+    <value>회원가입</value>
+  </data>
+  <data name="system" xml:space="preserve">
+    <value>시스템</value>
+  </data>
+  <data name="thema" xml:space="preserve">
+    <value>테마</value>
   </data>
 </root>
