--- a/AIpaca_App/Resources/Localization/AppResources.en.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.en.resx
@@ -117,7 +117,55 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="apisetting" xml:space="preserve">
+    <value>API Setting</value>
+  </data>
+  <data name="appversion" xml:space="preserve">
+    <value>APP Version</value>
+  </data>
+  <data name="challenge" xml:space="preserve">
+    <value>Challenge</value>
+  </data>
+  <data name="darkmode" xml:space="preserve">
+    <value>DarkMode</value>
+  </data>
   <data name="hi" xml:space="preserve">
-    <value>welcome</value>
+    <value>Hi</value>
+  </data>
+  <data name="home" xml:space="preserve">
+    <value>Home</value>
+  </data>
+  <data name="languageset" xml:space="preserve">
+    <value>Language Set</value>
+  </data>
+  <data name="login" xml:space="preserve">
+    <value>Login</value>
+  </data>
+  <data name="logout" xml:space="preserve">
+    <value>Logout</value>
+  </data>
+  <data name="lowspecmode" xml:space="preserve">
+    <value>Low Spec Mode</value>
+  </data>
+  <data name="network" xml:space="preserve">
+    <value>Network</value>
+  </data>
+  <data name="record" xml:space="preserve">
+    <value>Record</value>
+  </data>
+  <data name="robots" xml:space="preserve">
+    <value>Robots</value>
+  </data>
+  <data name="setting" xml:space="preserve">
+    <value>Setting</value>
+  </data>
+  <data name="signup" xml:space="preserve">
+    <value>Signup</value>
+  </data>
+  <data name="system" xml:space="preserve">
+    <value>System</value>
+  </data>
+  <data name="thema" xml:space="preserve">
+    <value>Thema</value>
   </data>
 </root>
