메인페이지 UI 구성
UI 임시 구성

--- a/AIpaca_App/Resources/Localization/AppResources.en.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.en.resx
@@ -139,7 +139,7 @@
     <value>Home</value>
   </data>
   <data name="languageset" xml:space="preserve">
-    <value>Language Set</value>
+    <value>Language</value>
   </data>
   <data name="login" xml:space="preserve">
     <value>Login</value>
