--- a/AIpaca_App/Resources/Localization/AppResources.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.resx
@@ -139,7 +139,7 @@
     <value>홈</value>
   </data>
   <data name="languageset" xml:space="preserve">
-    <value>언어설정</value>
+    <value>언어</value>
   </data>
   <data name="login" xml:space="preserve">
     <value>로그인</value>
