mainpage 언어 설정 및 api 처리를 위한 최적화 및 mvvm
mainpage 상단 언어설정 기능 추가, api 관리를 용이하게 하기위해 회원가입 기능을 mainviewmodel으로 이전

--- a/AIpaca_App/Resources/Localization/AppResources.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.resx
@@ -132,11 +132,17 @@
   <data name="email" xml:space="preserve">
     <value>이메일</value>
   </data>
+  <data name="en" xml:space="preserve">
+    <value>영어</value>
+  </data>
   <data name="hi" xml:space="preserve">
     <value>안녕하세요</value>
   </data>
   <data name="home" xml:space="preserve">
     <value>홈</value>
+  </data>
+  <data name="ko" xml:space="preserve">
+    <value>한국어</value>
   </data>
   <data name="languageset" xml:space="preserve">
     <value>언어</value>
@@ -161,6 +167,9 @@
   </data>
   <data name="robots" xml:space="preserve">
     <value>로봇놈들</value>
+  </data>
+  <data name="selectlanguage" xml:space="preserve">
+    <value>언어 선택</value>
   </data>
   <data name="setting" xml:space="preserve">
     <value>설정</value>
