--- a/AIpaca_App/Resources/Localization/AppResources.en.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.en.resx
@@ -132,11 +132,17 @@
   <data name="email" xml:space="preserve">
     <value>Email</value>
   </data>
+  <data name="en" xml:space="preserve">
+    <value>English</value>
+  </data>
   <data name="hi" xml:space="preserve">
     <value>Hi</value>
   </data>
   <data name="home" xml:space="preserve">
     <value>Home</value>
+  </data>
+  <data name="ko" xml:space="preserve">
+    <value>Korean</value>
   </data>
   <data name="languageset" xml:space="preserve">
     <value>Language</value>
@@ -161,6 +167,9 @@
   </data>
   <data name="robots" xml:space="preserve">
     <value>Robots</value>
+  </data>
+  <data name="selectlanguage" xml:space="preserve">
+    <value>Select Language</value>
   </data>
   <data name="setting" xml:space="preserve">
     <value>Setting</value>
