평가받기 다국어 지원
평가받기 기능 다국어 기능 추가

--- a/AIpaca_App/Resources/Localization/AppResources.en.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.en.resx
@@ -162,11 +162,17 @@
   <data name="password" xml:space="preserve">
     <value>Password</value>
   </data>
+  <data name="recommend" xml:space="preserve">
+    <value>Recommend</value>
+  </data>
   <data name="record" xml:space="preserve">
     <value>Record</value>
   </data>
   <data name="robots" xml:space="preserve">
     <value>Robots</value>
+  </data>
+  <data name="score" xml:space="preserve">
+    <value>Score</value>
   </data>
   <data name="selectlanguage" xml:space="preserve">
     <value>Select Language</value>
