스프레쉬 화면의 알람을 팝업페이지로 출력
DisplayAlert가 앱 내부의 다크모드와 호환이 되지않아 스플래쉬 화면의 업데이트 알림을 출력하기 위해 팝업페이지를 제작함
해당 팝업 페이지는 재사용이 가능하도록 작성되어 DisplayAlert를 대체하여 사용할 수 있음

--- a/AIpaca_App/Resources/Localization/AppResources.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.resx
@@ -123,6 +123,9 @@
   <data name="appversion" xml:space="preserve">
     <value>앱버전</value>
   </data>
+  <data name="cancel" xml:space="preserve">
+    <value>취소</value>
+  </data>
   <data name="challenge" xml:space="preserve">
     <value>도전과제</value>
   </data>
@@ -171,6 +174,9 @@
   <data name="network" xml:space="preserve">
     <value>네트워크</value>
   </data>
+  <data name="newupdate" xml:space="preserve">
+    <value>앱의 새로운 버전이 있습니다. 업데이트가 필요합니다.</value>
+  </data>
   <data name="password" xml:space="preserve">
     <value>비밀번호</value>
   </data>
@@ -206,6 +212,9 @@
   </data>
   <data name="translated_text" xml:space="preserve">
     <value>번역된 텍스트</value>
+  </data>
+  <data name="update" xml:space="preserve">
+    <value>업데이트</value>
   </data>
   <data name="username" xml:space="preserve">
     <value>유저이름</value>
