--- a/AIpaca_App/Resources/Localization/AppResources.en.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.en.resx
@@ -123,6 +123,9 @@
   <data name="appversion" xml:space="preserve">
     <value>APP Version</value>
   </data>
+  <data name="cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
   <data name="challenge" xml:space="preserve">
     <value>Challenge</value>
   </data>
@@ -171,6 +174,9 @@
   <data name="network" xml:space="preserve">
     <value>Network</value>
   </data>
+  <data name="newupdate" xml:space="preserve">
+    <value>There is a new version of the app. It needs to be updated.</value>
+  </data>
   <data name="password" xml:space="preserve">
     <value>Password</value>
   </data>
@@ -206,6 +212,9 @@
   </data>
   <data name="translated_text" xml:space="preserve">
     <value>Translated text</value>
+  </data>
+  <data name="update" xml:space="preserve">
+    <value>Update</value>
   </data>
   <data name="username" xml:space="preserve">
     <value>Username</value>
