--- a/AIpaca_App/Resources/Localization/AppResources.en.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.en.resx
@@ -135,6 +135,9 @@
   <data name="darkmode" xml:space="preserve">
     <value>DarkMode</value>
   </data>
+  <data name="deepltranslate" xml:space="preserve">
+    <value>DeepL Translate</value>
+  </data>
   <data name="email" xml:space="preserve">
     <value>Email</value>
   </data>
@@ -157,6 +160,9 @@ Please check the settings.</value>
   <data name="evaluate" xml:space="preserve">
     <value>Evaluate</value>
   </data>
+  <data name="googletranslate" xml:space="preserve">
+    <value>Google Translate</value>
+  </data>
   <data name="hi" xml:space="preserve">
     <value>Hi</value>
   </data>
@@ -168,6 +174,9 @@ Please check the settings.</value>
   </data>
   <data name="languageset" xml:space="preserve">
     <value>Language</value>
+  </data>
+  <data name="libretranslate" xml:space="preserve">
+    <value>LibreTranslate</value>
   </data>
   <data name="login" xml:space="preserve">
     <value>Login</value>
@@ -187,6 +196,9 @@ It needs to be updated.</value>
   </data>
   <data name="ok" xml:space="preserve">
     <value>OK</value>
+  </data>
+  <data name="papagotranslate" xml:space="preserve">
+    <value>Papago Translate</value>
   </data>
   <data name="password" xml:space="preserve">
     <value>Password</value>
