로그 기능 추가, 코드 가동성 추가, 디자인 개선
주요 오류를 추적하기 위한 로그 기능 추가
LogPage 추가, SettingPage에서 진입 가능하도록 구현
db 파일 이름 변경
코드의 가독성을 위 데이터베이스 관리 코드 병합 및 최적화
frame의 border 색상 추가

--- a/AIpaca_App/Resources/Localization/AppResources.en.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.en.resx
@@ -144,6 +144,9 @@
   <data name="en" xml:space="preserve">
     <value>English</value>
   </data>
+  <data name="errorlog" xml:space="preserve">
+    <value>Error Log</value>
+  </data>
   <data name="error_connection" xml:space="preserve">
     <value>Connection Error</value>
   </data>
