구글 번역기 추가 및 오류 수정
RobotPage의 번역을 위한 입력필드 및 구글번역기 추가
일본어 선택시 jp에서 ja로 출력되도록 변경

--- a/AIpaca_App/Resources/Localization/AppResources.en.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.en.resx
@@ -239,6 +239,9 @@ It needs to be updated.</value>
   <data name="translated_text" xml:space="preserve">
     <value>Translated text</value>
   </data>
+  <data name="translation" xml:space="preserve">
+    <value>Translation</value>
+  </data>
   <data name="update" xml:space="preserve">
     <value>Update</value>
   </data>
