--- a/AIpaca_App/Resources/Localization/AppResources.en.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.en.resx
@@ -117,14 +117,26 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="achievement_load_failed" xml:space="preserve">
+    <value>Failed to load achievement list</value>
+  </data>
   <data name="apisetting" xml:space="preserve">
     <value>API Setting</value>
+  </data>
+  <data name="api_request_failed" xml:space="preserve">
+    <value>API Request Failed</value>
+  </data>
+  <data name="api_request_successful" xml:space="preserve">
+    <value>API Request Successful</value>
   </data>
   <data name="api_save_complete" xml:space="preserve">
     <value>API key has been saved</value>
   </data>
   <data name="appversion" xml:space="preserve">
     <value>APP Version</value>
+  </data>
+  <data name="authenticated_success" xml:space="preserve">
+    <value>User authenticated successfully</value>
   </data>
   <data name="cancel" xml:space="preserve">
     <value>Cancel</value>
@@ -144,11 +156,27 @@
   <data name="en" xml:space="preserve">
     <value>English</value>
   </data>
+  <data name="error" xml:space="preserve">
+    <value>Error</value>
+  </data>
   <data name="errorlog" xml:space="preserve">
     <value>Error Log</value>
   </data>
+  <data name="error_api_load_failed" xml:space="preserve">
+    <value>API key loading failed</value>
+  </data>
+  <data name="error_api_response" xml:space="preserve">
+    <value>API response is not valid</value>
+  </data>
+  <data name="error_api_set" xml:space="preserve">
+    <value>API is not set</value>
+  </data>
   <data name="error_connection" xml:space="preserve">
     <value>Connection Error</value>
+  </data>
+  <data name="error_network" xml:space="preserve">
+    <value>A network error has occurred
+Please try again</value>
   </data>
   <data name="error_no_api" xml:space="preserve">
     <value>The API key is not set.
@@ -181,6 +209,9 @@ Please check the settings.</value>
   <data name="libretranslate" xml:space="preserve">
     <value>LibreTranslate</value>
   </data>
+  <data name="loading" xml:space="preserve">
+    <value>Loading</value>
+  </data>
   <data name="login" xml:space="preserve">
     <value>Login</value>
   </data>
@@ -212,6 +243,9 @@ It needs to be updated.</value>
   <data name="record" xml:space="preserve">
     <value>Record</value>
   </data>
+  <data name="record_addition_failed" xml:space="preserve">
+    <value>Record addition failed</value>
+  </data>
   <data name="robots" xml:space="preserve">
     <value>Robots</value>
   </data>
@@ -226,6 +260,27 @@ It needs to be updated.</value>
   </data>
   <data name="signup" xml:space="preserve">
     <value>Signup</value>
+  </data>
+  <data name="splash_check_version" xml:space="preserve">
+    <value>Checking app version</value>
+  </data>
+  <data name="splash_error_appstore" xml:space="preserve">
+    <value>App Store could not be opened, please check manually for updates.</value>
+  </data>
+  <data name="splash_error_appversion" xml:space="preserve">
+    <value>App Version Verification Error</value>
+  </data>
+  <data name="splash_server_connect_failed" xml:space="preserve">
+    <value>Server connection failed</value>
+  </data>
+  <data name="splash_server_connect_success" xml:space="preserve">
+    <value>Server connection successful - Count</value>
+  </data>
+  <data name="splash_server_try_connect" xml:space="preserve">
+    <value>Connecting to server - Count</value>
+  </data>
+  <data name="splash_version_latest" xml:space="preserve">
+    <value>It's the latest version</value>
   </data>
   <data name="system" xml:space="preserve">
     <value>System</value>
