--- a/AIpaca_App/Resources/Localization/AppResources.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.resx
@@ -117,14 +117,26 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="achievement_load_failed" xml:space="preserve">
+    <value>업적 목록을 로드하는 데 실패했습니다</value>
+  </data>
   <data name="apisetting" xml:space="preserve">
     <value>API 설정</value>
+  </data>
+  <data name="api_request_failed" xml:space="preserve">
+    <value>API 요청 실패</value>
+  </data>
+  <data name="api_request_successful" xml:space="preserve">
+    <value>API 요청 성공</value>
   </data>
   <data name="api_save_complete" xml:space="preserve">
     <value>api키가 저장되었습니다</value>
   </data>
   <data name="appversion" xml:space="preserve">
     <value>앱버전</value>
+  </data>
+  <data name="authenticated_success" xml:space="preserve">
+    <value>사용자 인증 성공</value>
   </data>
   <data name="cancel" xml:space="preserve">
     <value>취소</value>
@@ -144,15 +156,31 @@
   <data name="en" xml:space="preserve">
     <value>영어</value>
   </data>
+  <data name="error" xml:space="preserve">
+    <value>에러</value>
+  </data>
   <data name="errorlog" xml:space="preserve">
     <value>에러로그</value>
+  </data>
+  <data name="error_api_load_failed" xml:space="preserve">
+    <value>API 키 로드에 실패했습니다</value>
+  </data>
+  <data name="error_api_response" xml:space="preserve">
+    <value>API 응답이 유효하지 않습니다</value>
+  </data>
+  <data name="error_api_set" xml:space="preserve">
+    <value>API 키가 설정되지 않았습니다</value>
   </data>
   <data name="error_connection" xml:space="preserve">
     <value>연결 오류</value>
   </data>
+  <data name="error_network" xml:space="preserve">
+    <value>네트워크 오류가 발생했습니다
+다시 시도해주세요</value>
+  </data>
   <data name="error_no_api" xml:space="preserve">
-    <value>API키가 설정되어 있지 않습니다.
-설정 확인 바랍니다.</value>
+    <value>API키가 설정되어 있지 않습니다
+설정 확인 바랍니다</value>
   </data>
   <data name="error_no_text1" xml:space="preserve">
     <value>텍스트 필드1 비어있습니다</value>
@@ -181,6 +209,9 @@
   <data name="libretranslate" xml:space="preserve">
     <value>Libre Translate 번역기</value>
   </data>
+  <data name="loading" xml:space="preserve">
+    <value>로딩중</value>
+  </data>
   <data name="login" xml:space="preserve">
     <value>로그인</value>
   </data>
@@ -194,8 +225,8 @@
     <value>네트워크</value>
   </data>
   <data name="newupdate" xml:space="preserve">
-    <value>앱의 새로운 버전이 있습니다. 
-업데이트가 필요합니다.</value>
+    <value>앱의 새로운 버전이 있습니다.
+업데이트가 필요합니다</value>
   </data>
   <data name="ok" xml:space="preserve">
     <value>확인</value>
@@ -212,6 +243,9 @@
   <data name="record" xml:space="preserve">
     <value>기록</value>
   </data>
+  <data name="record_addition_failed" xml:space="preserve">
+    <value>레코드 추가에 실패했습니다</value>
+  </data>
   <data name="robots" xml:space="preserve">
     <value>로봇놈들</value>
   </data>
@@ -226,6 +260,31 @@
   </data>
   <data name="signup" xml:space="preserve">
     <value>회원가입</value>
+  </data>
+  <data name="signup_successful" xml:space="preserve">
+    <value>회원가입 성공</value>
+  </data>
+  <data name="splash_check_version" xml:space="preserve">
+    <value>앱 버전 확인중</value>
+  </data>
+  <data name="splash_error_appstore" xml:space="preserve">
+    <value>앱스토어를 열지 못했습니다
+업데이트 내용을 수동으로 확인하십시오</value>
+  </data>
+  <data name="splash_error_appversion" xml:space="preserve">
+    <value>앱 버전 확인 오류</value>
+  </data>
+  <data name="splash_server_connect_failed" xml:space="preserve">
+    <value>서버 연결 실패</value>
+  </data>
+  <data name="splash_server_connect_success" xml:space="preserve">
+    <value>서버 연결 성공 - 횟수</value>
+  </data>
+  <data name="splash_server_try_connect" xml:space="preserve">
+    <value>서버 연결중 - 횟수</value>
+  </data>
+  <data name="splash_version_latest" xml:space="preserve">
+    <value>최신버전입니다</value>
   </data>
   <data name="system" xml:space="preserve">
     <value>시스템</value>
