--- a/AIpaca_App/Resources/Localization/AppResources.ja.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.ja.resx
@@ -144,6 +144,12 @@
   <data name="challenge" xml:space="preserve">
     <value>挑戦します</value>
   </data>
+  <data name="copy_failed" xml:space="preserve">
+    <value>Copy failed : There is no text to copy</value>
+  </data>
+  <data name="copy_successful" xml:space="preserve">
+    <value>Copy complete</value>
+  </data>
   <data name="darkmode" xml:space="preserve">
     <value>ダークモードです</value>
   </data>
@@ -158,9 +164,6 @@
   </data>
   <data name="error" xml:space="preserve">
     <value>Error</value>
-  </data>
-  <data name="errorlog" xml:space="preserve">
-    <value>Error Log</value>
   </data>
   <data name="error_api_load_failed" xml:space="preserve">
     <value>API key loading failed</value>
@@ -210,6 +213,9 @@ Please try again</value>
   </data>
   <data name="loading" xml:space="preserve">
     <value>Loading</value>
+  </data>
+  <data name="log" xml:space="preserve">
+    <value>Log</value>
   </data>
   <data name="login" xml:space="preserve">
     <value>ログインします</value>
