RecordPage 새로고침 기능 수정, 수동 업데이트 추가

--- a/AIpaca_App/Resources/Localization/AppResources.en.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.en.resx
@@ -227,6 +227,9 @@ Please check the settings.</value>
   <data name="lowspecmode" xml:space="preserve">
     <value>Low Spec Mode</value>
   </data>
+  <data name="manualupdate" xml:space="preserve">
+    <value>Manual Update</value>
+  </data>
   <data name="network" xml:space="preserve">
     <value>Network</value>
   </data>
