저사양 버튼 클릭오류 수정, settingpage 요소 추가

--- a/AIpaca_App/Resources/Localization/AppResources.ja.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.ja.resx
@@ -138,11 +138,17 @@
   <data name="authenticated_success" xml:space="preserve">
     <value>User authenticated successfully</value>
   </data>
+  <data name="backup" xml:space="preserve">
+    <value>Backup</value>
+  </data>
   <data name="cancel" xml:space="preserve">
     <value>キャンセルします</value>
   </data>
   <data name="challenge" xml:space="preserve">
     <value>挑戦します</value>
+  </data>
+  <data name="checkserverconnection" xml:space="preserve">
+    <value>Check server connection</value>
   </data>
   <data name="copy_failed" xml:space="preserve">
     <value>Copy failed : There is no text to copy</value>
