--- a/AIpaca_App/Resources/Localization/AppResources.en.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.en.resx
@@ -138,11 +138,17 @@
   <data name="authenticated_success" xml:space="preserve">
     <value>User authenticated successfully</value>
   </data>
+  <data name="backup" xml:space="preserve">
+    <value>Backup</value>
+  </data>
   <data name="cancel" xml:space="preserve">
     <value>Cancel</value>
   </data>
   <data name="challenge" xml:space="preserve">
     <value>Challenge</value>
+  </data>
+  <data name="checkserverconnection" xml:space="preserve">
+    <value>Check server connection</value>
   </data>
   <data name="copy_failed" xml:space="preserve">
     <value>Copy failed : There is no text to copy</value>
