--- a/AIpaca_App/Resources/Localization/AppResources.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.resx
@@ -156,6 +156,9 @@
   <data name="copy_successful" xml:space="preserve">
     <value>복사 완료</value>
   </data>
+  <data name="createapikey" xml:space="preserve">
+    <value>API 키 만들기</value>
+  </data>
   <data name="darkmode" xml:space="preserve">
     <value>다크 모드</value>
   </data>
