--- a/AIpaca_App/Resources/Localization/AppResources.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.resx
@@ -307,6 +307,9 @@
   <data name="splash_version_latest" xml:space="preserve">
     <value>최신버전입니다</value>
   </data>
+  <data name="success" xml:space="preserve">
+    <value>성공</value>
+  </data>
   <data name="system" xml:space="preserve">
     <value>시스템</value>
   </data>
