언어 설정시 팝업창으로 한번 더 확인
언어 설정 ViewModel 생성 및 코드 정리

--- a/AIpaca_App/Resources/Localization/AppResources.ja.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.ja.resx
@@ -150,6 +150,9 @@
   <data name="challenge" xml:space="preserve">
     <value>挑戦します</value>
   </data>
+  <data name="changelanguage" xml:space="preserve">
+    <value>Change Language</value>
+  </data>
   <data name="checkserverconnection" xml:space="preserve">
     <value>Check server connection</value>
   </data>
