윈도우 버전을 위한 작업 시작
db 초기 데이터 입력
alertpopup의 크기 조절

--- a/AIpaca_App/Resources/Localization/AppResources.en.resx
+++ b/AIpaca_App/Resources/Localization/AppResources.en.resx
@@ -153,6 +153,9 @@
   <data name="changelanguage" xml:space="preserve">
     <value>Change Language</value>
   </data>
+  <data name="cheak_DB" xml:space="preserve">
+    <value>Cheak DB</value>
+  </data>
   <data name="checkserverconnection" xml:space="preserve">
     <value>Check server connection</value>
   </data>
@@ -272,6 +275,9 @@ It needs to be updated.</value>
   </data>
   <data name="password" xml:space="preserve">
     <value>Password</value>
+  </data>
+  <data name="please_setup" xml:space="preserve">
+    <value>Please set up</value>
   </data>
   <data name="rating" xml:space="preserve">
     <value>Rating</value>
